[gd_scene load_steps=4 format=2]

[ext_resource path="res://core/menu/dialog/independent_panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://maps/exit_menu.gd" type="Script" id=2]
[ext_resource path="res://core/shortcut/ui_cancel.tres" type="ShortCut" id=3]

[node name="ExitMenu" instance=ExtResource( 1 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -161.634
margin_top = -180.557
margin_right = -161.634
margin_bottom = -180.557
script = ExtResource( 2 )
title = "Paused"

[node name="Title" parent="." index="2"]
text = "Paused"

[node name="Box" type="VBoxContainer" parent="." index="3"]
margin_left = 40.0
margin_top = 40.0
margin_right = 302.0
margin_bottom = 359.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Box" index="0"]
margin_right = 262.0
margin_bottom = 41.6293
shortcut = ExtResource( 3 )
text = "Continue"

[node name="Settings" type="Button" parent="Box" index="1"]
margin_top = 51.0
margin_right = 262.0
margin_bottom = 92.6293
text = "Settings"

[node name="Restart" type="Button" parent="Box" index="2"]
margin_top = 102.0
margin_right = 262.0
margin_bottom = 143.629
text = "Restart"

[node name="Exit" type="Button" parent="Box" index="3"]
margin_top = 153.0
margin_right = 262.0
margin_bottom = 194.629
text = "Exit"
[connection signal="pressed" from="Box/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="Box/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Box/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Box/Exit" to="." method="_on_Exit_pressed"]
